# population-simulation

./: README.md  classes.py  events.py  main.py  pyproject.toml
src/: config.py  event_handlers.py  events.py  main.py  person.py  test.py
