[tool.poetry]
name = "population-evolution-sim"
version = "0.1.0"
description = "Simulates the evolution of a population for a determined amount of years."
authors = ["rodrigo-pino <rodrodpino@gmial.com>"]
license = "GNU 3.0"

[tool.poetry.dependencies]
python = "^3.9"
llist = "^0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
